--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,4 @@ django-compressor==2.2
 python-dateutil==2.8.0
 django-celery==3.2.2
 celery==3.1.25
-opal==0.18.0
+-e git+https://github.com/openhealthcare/opal.git@refactor#egg=opal
