--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,4 @@ djangorestframework==3.10.2
 python-dateutil==2.8.0
 django-celery==3.2.2
 celery==3.1.25
--e git+https://github.com/openhealthcare/opal.git@refactor#egg=opal
+-e git+https://github.com/openhealthcare/opal.git@add-vue#egg=opal
