--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ python-dateutil==2.8.0
 django-celery==3.2.2
 celery==3.1.25
 -e git+https://github.com/openhealthcare/opal.git@add-vue#egg=opal
+django-webpack-loader==0.6.0
