--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,4 @@ django-celery==3.2.2
 celery==3.1.25
 -e git+https://github.com/openhealthcare/opal.git@add-vue#egg=opal
 django-webpack-loader==0.6.0
+whitenoise==5.0.1
