--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "NODE_ENV=production vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "heroku-postbuild": "NODE_ENV=production vue-cli-service build"
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
